--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
         </svg>
         <div class="message" id="message">
             <!-- PUT YOUR CUSTOM MESSAGE HERE (e.g., a love note) -->
-            <p>Dear [Recipient's Name],</p>
-            <p>This is your vintage-style letter on brown parchment. Add your personal message here!</p>
-            <p>Will you be my Valentine?</p>
+            <p>Dear [Piya],</p>
+            <p>Our past few months were a blend of rough and jagged, only now have we had the opportunity to puruse how we feel, and I havent been happier. Now, if it isn't too much trouble, I'd like to take you out this 14th.</p>
+            <p> Soppheia, Will you PLEASE be my Valentine?</p>
             <!-- Yes/No buttons with notification -->
             <div class="buttons">
                 <form action="https://formspree.io/f/mwvneqpo" method="POST" id="valentineForm">
@@ -138,4 +138,5 @@
         }
     </script>
 </body>
+
 </html>
