--- a/index.html
+++ b/index.html
@@ -3,24 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Valentine's Envelope</title>
+    <title>Romantic Envelope</title>
     <style>
         body {
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background: linear-gradient(135deg, #ff69b4, #ff1493); /* Pink to red gradient */
-            font-family: 'Courier New', monospace; /* Vintage font feel */
+            background: linear-gradient(135deg, #ffe4e1, #ffb6c1, #ff69b4); /* Soft pink gradients */
+            font-family: 'Georgia', serif; /* Romantic font */
             overflow: hidden;
+            position: relative;
+        }
+        .heart {
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            fill: #ff1493;
+            opacity: 0.7;
+            animation: floatHearts 6s ease-in-out infinite;
+        }
+        .heart:nth-child(odd) { animation-delay: -2s; }
+        .heart:nth-child(even) { animation-delay: -4s; }
+        @keyframes floatHearts {
+            0%, 100% { transform: translateY(0) rotate(0deg); opacity: 0.7; }
+            50% { transform: translateY(-20px) rotate(10deg); opacity: 1; }
         }
         .envelope {
             width: 350px;
             height: 250px;
             position: relative;
             cursor: pointer;
-            transition: transform 0.5s;
+            transition: transform 0.5s, box-shadow 0.5s;
+            z-index: 10;
         }
+        .envelope:hover { box-shadow: 0 0 20px rgba(255, 20, 147, 0.5); } /* Glowing effect */
         .envelope svg {
             width: 100%;
             height: 100%;
@@ -34,18 +51,19 @@
             left: 50%;
             transform: translate(-50%, -50%);
             opacity: 0;
-            transition: opacity 0.5s;
+            transition: opacity 0.8s ease-in-out;
             text-align: center;
             font-size: 16px;
-            color: #5a3a1a; /* Brown text for vintage look */
-            background: #d2b48c; /* Tan/brown parchment color */
-            border: 2px solid #8b4513; /* Dark brown border */
+            color: #5a3a1a;
+            background: #f5f5dc; /* Parchment-like */
+            border: 2px solid #daa520;
             padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.3);
-            width: 280px;
-            height: 180px;
+            border-radius: 15px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+            width: 300px;
+            height: 200px;
             overflow: auto;
+            line-height: 1.5;
         }
         .envelope.open .flap {
             transform: rotateX(180deg);
@@ -53,90 +71,60 @@
         .envelope.open .message {
             opacity: 1;
         }
-        .hearts {
-            position: absolute;
-            top: -20px;
-            left: -20px;
-            width: 50px;
-            height: 50px;
-            animation: float 3s ease-in-out infinite;
-        }
-        .roses {
-            position: absolute;
-            bottom: -20px;
-            right: -20px;
-            width: 50px;
-            height: 50px;
-            animation: float 4s ease-in-out infinite reverse;
-        }
-        @keyframes float {
-            0%, 100% { transform: translateY(0); }
-            50% { transform: translateY(-10px); }
-        }
-        .buttons {
-            margin-top: 15px;
-        }
-        button {
-            background: #ff1493;
-            color: white;
-            border: none;
-            padding: 8px 15px;
-            margin: 0 5px;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 14px;
-        }
-        button:hover {
-            background: #dc143c;
-        }
     </style>
 </head>
 <body>
-    <!-- Decorative hearts and roses -->
-    <svg class="hearts" viewBox="0 0 24 24" fill="#ff1493">
-        <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
-    </svg>
-    <svg class="roses" viewBox="0 0 24 24" fill="#dc143c">
-        <path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"/>
-    </svg>
+    <!-- Floating hearts for visual appeal -->
+    <svg class="heart" style="top: 10%; left: 10%;"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/></svg>
+    <svg class="heart" style="top: 20%; right: 15%;"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/></svg>
+    <svg class="heart" style="top: 50%; left: 5%;"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/></svg>
+    <svg class="heart" style="top: 70%; right: 10%;"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/></svg>
+    <svg class="heart" style="top: 80%; left: 20%;"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/></svg>
+    <svg class="heart" style="top: 30%; right: 5%;"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/></svg>
+
+    <!-- Romantic piano music (auto-loop) -->
+    <audio id="pianoMusic" loop autoplay preload="auto">
+        <source src="romantic_piano.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
+
+    <!-- Audio for envelope sounds (from previous version) -->
+    <audio id="openSound" preload="auto">
+        <source src="open.mp3" type="audio/mpeg">
+    </audio>
+    <audio id="closeSound" preload="auto">
+        <source src="close.mp3" type="audio/mpeg">
+    </audio>
 
     <div class="envelope" id="envelope">
         <svg viewBox="0 0 350 250">
-            <!-- Envelope body (pink/red) -->
+            <!-- Envelope body -->
             <rect x="10" y="50" width="330" height="180" fill="#ffb6c1" stroke="#ff1493" stroke-width="3"/>
-            <!-- Flap (red) -->
+            <!-- Flap -->
             <polygon points="10,50 175,10 340,50" fill="#ff69b4" stroke="#ff1493" stroke-width="3" class="flap"/>
         </svg>
         <div class="message" id="message">
-            <!-- PUT YOUR CUSTOM MESSAGE HERE (e.g., a love note) -->
-            <p>Dear [Piya],</p>
-            <p>Our past few months were a blend of rough and jagged, only now have we had the opportunity to puruse how we feel, and I havent been happier. Now, if it isn't too much trouble, I'd like to take you out this 14th.</p>
-            <p> Soppheia, Will you PLEASE be my Valentine?</p>
-            <!-- Yes/No buttons with notification -->
-            <div class="buttons">
-                <form action="https://formspree.io/f/mwvneqpo" method="POST" id="valentineForm">
-                    <input type="hidden" name="response" id="response">
-                    <button type="button" onclick="submitResponse('Yes')">Yes</button>
-                    <button type="button" onclick="submitResponse('No')">No</button>
-                </form>
-            </div>
+            <p>to my Piya,</p>
+            <p>Our past couple of months were rough and jagged. We faced many hurdles, and yet, unbeknownst to us, here we are.</p>
+            <p>I've enjoy your presence. Yes, every single time we're together, I wish we'd be locked in a cage where we're free to be us. in our serious, and most quirkiest sides, which is one of the reasons I fell for you. Please know that I see all that you are, and I am grateful, proud even of what we already are.</p>
+            <p>In the name of all love the north has to offer, Sig</p>
         </div>
     </div>
 
     <script>
         const envelope = document.getElementById('envelope');
         const message = document.getElementById('message');
+        const openSound = document.getElementById('openSound');
+        const closeSound = document.getElementById('closeSound');
 
         envelope.addEventListener('click', () => {
             envelope.classList.toggle('open');
+            if (envelope.classList.contains('open')) {
+                openSound.play();
+            } else {
+                closeSound.play();
+            }
         });
-
-        function submitResponse(response) {
-            document.getElementById('response').value = response;
-            document.getElementById('valentineForm').submit();
-            alert(`Response submitted: ${response}. You'll be notified via email!`);
-        }
     </script>
 </body>
-
 </html>
